[package]
authors = ["casprine"]
description = "all in one daily writing driver"
edition = "2021"
license = ""
name = "Ibis"
repository = ""
version = "0.1.0"


[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.4", features = [ "macos-private-api",
  "http-all",
  "window-unminimize",
  "window-minimize",
  "window-maximize",
  "window-unmaximize",
  "window-show",
  "window-hide",
  "window-close",
  "path-all",
  "global-shortcut-all",
  "fs-all",
  "dialog-all",
  "window-start-dragging",
  "shell-open",
] }
walkdir = "2"
window-vibrancy = "0.4.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
